# MPCAnonymousBloging

./: .gitignore  10000G_10000MG_100-I_50-O_10D_OutputAll4P.txt  CMakeLists.txt  MPCAnonymousBloging.cbp  Parties.txt  ProtocolParty.h  README.md  main.cpp  run_protocol.sh
MATRIX/: build.sh  matrix_conf  run.sh
MPCAnonymousBloggingClient/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  main.cpp
gemmOren/: DeviceMat.h  MersseneTypes.h  cudaGemm.h  kernel.cu  utils.h
gemmOren/cutlass/: convert.h  coord.h  core_io.h  cutlass.h  fragment.h  fragment_multiply_add.h  iterator_access.h  kernel_launch.h  load_store.h  matrix_traits.h  predicate_vector.h  reshape_tile.h  shape.h  tensor_ref.h  tensor_ref_collection.h  tensor_view.h  tile_allocation.h  tile_coord.h  tile_iterator.h  tile_stream.h  tile_traits_standard.h  vector.h  wmma_matrix.h  zip_fragment.h  zip_tensor_ref.h  zip_tile_iterator.h
gemmOren/cutlass/gemm/: clear_accumulators.h  device_gemm.h  device_gemm_traits.h  dgemm_traits.h  fp16_sgemm_multiply_add.h  fp16_sgemm_traits.h  gemm.h  gemm_config.h  gemm_coord.h  gemm_desc.h  gemm_epilogue.h  gemm_epilogue_traits.h  gemm_global_stream.h  gemm_global_tile.h  gemm_operand.h  gemm_shared_stream.h  gemm_shared_tile.h  gemm_stream_pair.h  gemm_traits.h  hgemm_global_tile.h  hgemm_multiply_add.h  hgemm_swizzle.h  hgemm_traits.h  igemm_epilogue.h  igemm_global_tile.h  igemm_multiply_add.h  igemm_swizzle.h  igemm_traits.h  linear_scaling.h  linear_scaling_device_ptr.h  scalar_or_pointer.h  sgemm_traits.h  thread_multiply_add.h  threadblock_swizzle.h  wmma_gemm_epilogue_traits.h  wmma_gemm_global_tile.h  wmma_gemm_multiply_add.h  wmma_gemm_shared_tile.h  wmma_gemm_traits.h
gemmOren/cutlass/reduction/: batched_reduction.h  batched_reduction_traits.h  threadblock_swizzle.h
gemmOren/cutlass/util/: complex.h  cutlass_math.h  debug.h  numeric_types.h  pair.h  performance_tuning.h  platform.h
